# mini-brain-games-python

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: games_engine.py
brain_games/games/: calc_game.py  even_game.py  games_constants.py  games_engine.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
